--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -13,16 +13,22 @@
       <div class="sidebar-header">
         <div class="logo">
           <div class="logo-icon">
-            <svg viewBox="0 0 128 128" fill="none">
-              <!-- Stacked cards/tabs - back layers -->
-              <rect x="22" y="58" width="84" height="56" rx="8" fill="rgba(255,255,255,0.25)" transform="rotate(-3 64 86)"/>
-              <rect x="22" y="50" width="84" height="56" rx="8" fill="rgba(255,255,255,0.5)" transform="rotate(2 64 78)"/>
-              <!-- Front card - the one surfacing -->
+            <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+              <defs>
+                <linearGradient id="bgGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" style="stop-color:#8b5cf6"/>
+                  <stop offset="100%" style="stop-color:#7c3aed"/>
+                </linearGradient>
+              </defs>
+              <rect width="128" height="128" rx="28" fill="url(#bgGrad)"/>
+              <rect x="22" y="58" width="84" height="56" rx="8" fill="rgba(255,255,255,0.2)" transform="rotate(-3 64 86)"/>
+              <rect x="22" y="50" width="84" height="56" rx="8" fill="rgba(255,255,255,0.4)" transform="rotate(2 64 78)"/>
               <rect x="20" y="28" width="88" height="60" rx="8" fill="white"/>
-              <!-- Content lines on front card -->
-              <line x1="32" y1="46" x2="96" y2="46" stroke="#6366f1" stroke-width="4" stroke-linecap="round"/>
-              <line x1="32" y1="60" x2="76" y2="60" stroke="#a5b4fc" stroke-width="4" stroke-linecap="round"/>
-              <line x1="32" y1="74" x2="60" y2="74" stroke="#a5b4fc" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="46" x2="96" y2="46" stroke="#7c3aed" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="60" x2="76" y2="60" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="74" x2="60" y2="74" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <circle cx="98" cy="22" r="7" fill="#fbbf24"/>
+              <path d="M98 12 L98 8 M108 22 L112 22 M98 32 L98 28" stroke="#fbbf24" stroke-width="2.5" stroke-linecap="round"/>
             </svg>
           </div>
           <span class="logo-text">Resurface</span>
