--- a/store-assets/screenshots.html
+++ b/store-assets/screenshots.html
@@ -95,13 +95,10 @@
       box-shadow: 0 8px 32px rgba(99, 102, 241, 0.4);
     }
 
-    .newtab-logo-icon svg {
-      width: 32px;
-      height: 32px;
-      stroke: white;
-      stroke-width: 2;
-      fill: none;
-    }
+.newtab-logo-icon svg {
+  width: 56px;
+  height: 56px;
+}
 
     .newtab-logo-text {
       font-size: 36px;
@@ -280,13 +277,10 @@
       justify-content: center;
     }
 
-    .toast-icon svg {
-      width: 22px;
-      height: 22px;
-      stroke: white;
-      stroke-width: 2;
-      fill: none;
-    }
+.toast-icon svg {
+  width: 40px;
+  height: 40px;
+}
 
     .toast-header-text {
       font-weight: 600;
@@ -406,11 +400,8 @@
     }
 
     .sidebar-logo-icon svg {
-      width: 22px;
-      height: 22px;
-      stroke: white;
-      stroke-width: 2.5;
-      fill: none;
+      width: 40px;
+      height: 40px;
     }
 
     .sidebar-logo-text {
@@ -715,13 +706,10 @@
       justify-content: center;
     }
 
-    .overlay-icon svg {
-      width: 18px;
-      height: 18px;
-      stroke: white;
-      stroke-width: 2;
-      fill: none;
-    }
+.overlay-icon svg {
+  width: 32px;
+  height: 32px;
+}
 
     .overlay-title {
       font-size: 14px;
@@ -834,13 +822,10 @@
       box-shadow: 0 12px 40px rgba(99, 102, 241, 0.4);
     }
 
-    .promo-logo-icon svg {
-      width: 44px;
-      height: 44px;
-      stroke: white;
-      stroke-width: 2;
-      fill: none;
-    }
+.promo-logo-icon svg {
+  width: 80px;
+  height: 80px;
+}
 
     .promo-logo-text {
       font-size: 56px;
@@ -903,8 +888,22 @@
     <div class="screenshot screenshot-newtab">
       <div class="newtab-logo">
         <div class="newtab-logo-icon">
-          <svg viewBox="0 0 24 24">
-            <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
+          <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <linearGradient id="bgGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+                <stop offset="0%" style="stop-color:#8b5cf6"/>
+                <stop offset="100%" style="stop-color:#7c3aed"/>
+              </linearGradient>
+            </defs>
+            <rect width="128" height="128" rx="28" fill="url(#bgGrad)"/>
+            <rect x="22" y="58" width="84" height="56" rx="8" fill="rgba(255,255,255,0.2)" transform="rotate(-3 64 86)"/>
+            <rect x="22" y="50" width="84" height="56" rx="8" fill="rgba(255,255,255,0.4)" transform="rotate(2 64 78)"/>
+            <rect x="20" y="28" width="88" height="60" rx="8" fill="white"/>
+            <line x1="32" y1="46" x2="96" y2="46" stroke="#7c3aed" stroke-width="4" stroke-linecap="round"/>
+            <line x1="32" y1="60" x2="76" y2="60" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+            <line x1="32" y1="74" x2="60" y2="74" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+            <circle cx="98" cy="22" r="7" fill="#fbbf24"/>
+            <path d="M98 12 L98 8 M108 22 L112 22 M98 32 L98 28" stroke="#fbbf24" stroke-width="2.5" stroke-linecap="round"/>
           </svg>
         </div>
         <span class="newtab-logo-text">Resurface</span>
@@ -979,8 +978,22 @@
       <div class="toast-container">
         <div class="toast-header">
           <div class="toast-icon">
-            <svg viewBox="0 0 24 24">
-              <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
+            <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+              <defs>
+                <linearGradient id="bgGradToast" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" style="stop-color:#8b5cf6"/>
+                  <stop offset="100%" style="stop-color:#7c3aed"/>
+                </linearGradient>
+              </defs>
+              <rect width="128" height="128" rx="28" fill="url(#bgGradToast)"/>
+              <rect x="22" y="58" width="84" height="56" rx="8" fill="rgba(255,255,255,0.2)" transform="rotate(-3 64 86)"/>
+              <rect x="22" y="50" width="84" height="56" rx="8" fill="rgba(255,255,255,0.4)" transform="rotate(2 64 78)"/>
+              <rect x="20" y="28" width="88" height="60" rx="8" fill="white"/>
+              <line x1="32" y1="46" x2="96" y2="46" stroke="#7c3aed" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="60" x2="76" y2="60" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="74" x2="60" y2="74" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <circle cx="98" cy="22" r="7" fill="#fbbf24"/>
+              <path d="M98 12 L98 8 M108 22 L112 22 M98 32 L98 28" stroke="#fbbf24" stroke-width="2.5" stroke-linecap="round"/>
             </svg>
           </div>
           <div>
@@ -1018,8 +1031,22 @@
       <div class="sidebar">
         <div class="sidebar-logo">
           <div class="sidebar-logo-icon">
-            <svg viewBox="0 0 24 24">
-              <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
+            <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+              <defs>
+                <linearGradient id="bgGradSidebar" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" style="stop-color:#8b5cf6"/>
+                  <stop offset="100%" style="stop-color:#7c3aed"/>
+                </linearGradient>
+              </defs>
+              <rect width="128" height="128" rx="28" fill="url(#bgGradSidebar)"/>
+              <rect x="22" y="58" width="84" height="56" rx="8" fill="rgba(255,255,255,0.2)" transform="rotate(-3 64 86)"/>
+              <rect x="22" y="50" width="84" height="56" rx="8" fill="rgba(255,255,255,0.4)" transform="rotate(2 64 78)"/>
+              <rect x="20" y="28" width="88" height="60" rx="8" fill="white"/>
+              <line x1="32" y1="46" x2="96" y2="46" stroke="#7c3aed" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="60" x2="76" y2="60" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="74" x2="60" y2="74" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <circle cx="98" cy="22" r="7" fill="#fbbf24"/>
+              <path d="M98 12 L98 8 M108 22 L112 22 M98 32 L98 28" stroke="#fbbf24" stroke-width="2.5" stroke-linecap="round"/>
             </svg>
           </div>
           <span class="sidebar-logo-text">Resurface</span>
@@ -1208,8 +1235,22 @@
         <div class="overlay-header">
           <div class="overlay-header-left">
             <div class="overlay-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
+              <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                  <linearGradient id="bgGradOverlay" x1="0%" y1="0%" x2="100%" y2="100%">
+                    <stop offset="0%" style="stop-color:#8b5cf6"/>
+                    <stop offset="100%" style="stop-color:#7c3aed"/>
+                  </linearGradient>
+                </defs>
+                <rect width="128" height="128" rx="28" fill="url(#bgGradOverlay)"/>
+                <rect x="22" y="58" width="84" height="56" rx="8" fill="rgba(255,255,255,0.2)" transform="rotate(-3 64 86)"/>
+                <rect x="22" y="50" width="84" height="56" rx="8" fill="rgba(255,255,255,0.4)" transform="rotate(2 64 78)"/>
+                <rect x="20" y="28" width="88" height="60" rx="8" fill="white"/>
+                <line x1="32" y1="46" x2="96" y2="46" stroke="#7c3aed" stroke-width="4" stroke-linecap="round"/>
+                <line x1="32" y1="60" x2="76" y2="60" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+                <line x1="32" y1="74" x2="60" y2="74" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+                <circle cx="98" cy="22" r="7" fill="#fbbf24"/>
+                <path d="M98 12 L98 8 M108 22 L112 22 M98 32 L98 28" stroke="#fbbf24" stroke-width="2.5" stroke-linecap="round"/>
               </svg>
             </div>
             <div class="overlay-title"><strong>2 saved pages</strong> match</div>
@@ -1248,8 +1289,22 @@
       <div class="promo-content">
         <div class="promo-logo">
           <div class="promo-logo-icon">
-            <svg viewBox="0 0 24 24">
-              <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/>
+            <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+              <defs>
+                <linearGradient id="bgGradPromo" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" style="stop-color:#8b5cf6"/>
+                  <stop offset="100%" style="stop-color:#7c3aed"/>
+                </linearGradient>
+              </defs>
+              <rect width="128" height="128" rx="28" fill="url(#bgGradPromo)"/>
+              <rect x="22" y="58" width="84" height="56" rx="8" fill="rgba(255,255,255,0.2)" transform="rotate(-3 64 86)"/>
+              <rect x="22" y="50" width="84" height="56" rx="8" fill="rgba(255,255,255,0.4)" transform="rotate(2 64 78)"/>
+              <rect x="20" y="28" width="88" height="60" rx="8" fill="white"/>
+              <line x1="32" y1="46" x2="96" y2="46" stroke="#7c3aed" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="60" x2="76" y2="60" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <line x1="32" y1="74" x2="60" y2="74" stroke="#c4b5fd" stroke-width="4" stroke-linecap="round"/>
+              <circle cx="98" cy="22" r="7" fill="#fbbf24"/>
+              <path d="M98 12 L98 8 M108 22 L112 22 M98 32 L98 28" stroke="#fbbf24" stroke-width="2.5" stroke-linecap="round"/>
             </svg>
           </div>
           <span class="promo-logo-text">Resurface</span>
