--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -192,6 +192,27 @@
           </div>
           <span>Translate</span>
         </a>
+        <a href="https://www.google.com/imghp" class="newtab-quick-link" title="Images">
+          <div class="newtab-quick-icon images">
+            <svg viewBox="0 0 24 24">
+              <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2" fill="none"/>
+              <circle cx="8.5" cy="8.5" r="1.5" fill="currentColor"/>
+              <polyline points="21 15 16 10 5 21" stroke="currentColor" stroke-width="2" fill="none"/>
+            </svg>
+          </div>
+          <span>Images</span>
+        </a>
+        <a href="https://news.google.com" class="newtab-quick-link" title="News">
+          <div class="newtab-quick-icon news">
+            <svg viewBox="0 0 24 24">
+              <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" stroke="currentColor" stroke-width="2" fill="none"/>
+              <line x1="4" y1="8" x2="20" y2="8" stroke="currentColor" stroke-width="2"/>
+              <line x1="4" y1="12" x2="12" y2="12" stroke="currentColor" stroke-width="2"/>
+              <line x1="4" y1="16" x2="12" y2="16" stroke="currentColor" stroke-width="2"/>
+            </svg>
+          </div>
+          <span>News</span>
+        </a>
       </div>
 
       <!-- Quick stats -->
