Center align quick shortcuts and ensure space for 9 icons
- Added wrapper container for proper centering
- Set container width to accommodate 9 icons (9 * 68px + 8 * 6px gaps)
- Changed justify-content to center for proper alignment
- Icons stay centered when count decreases
- Fixed width (68px) for each icon for consistent layout
- Container maintains minimum width for 9 icons even with fewer icons

--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -100,8 +100,12 @@
       </div>
       
       <!-- Quick Links (Google Apps) - Dynamically rendered -->
-      <div class="newtab-quick-links" id="quick-links" style="display: none;">
-        <!-- Quick links will be rendered here by JavaScript -->
+      <div class="newtab-quick-links-container">
+        <div class="newtab-quick-links-wrapper">
+          <div class="newtab-quick-links" id="quick-links" style="display: none;">
+            <!-- Quick links will be rendered here by JavaScript -->
+          </div>
+        </div>
       </div>
 
       <!-- Quick stats -->
